[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-autotrans"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
AutoTrans = "limnoria_autotrans"

[tool.setuptools.package-dir]
"limnoria_autotrans" = "."
"limnoria_autotrans.local" = "local/"

[tool.setuptools.package-data]
"limnoria_autotrans" = ["locales/*.po"]
