[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-biography"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Biography = "limnoria_biography"

[tool.setuptools.package-dir]
"limnoria_biography" = "."
"limnoria_biography.local" = "local/"

[tool.setuptools.package-data]
"limnoria_biography" = ["locales/*.po"]
