[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-channelstatus"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
ChannelStatus = "limnoria_channelstatus"

[tool.setuptools.package-dir]
"limnoria_channelstatus" = "."
"limnoria_channelstatus.local" = "local/"

[tool.setuptools.package-data]
"limnoria_channelstatus" = ["locales/*.po"]
