[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-cleverbot"
version = "0.0.0"
authors = [

]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Cleverbot = "limnoria_cleverbot"

[tool.setuptools.package-dir]
"limnoria_cleverbot" = "."
"limnoria_cleverbot.local" = "local/"

[tool.setuptools.package-data]
"limnoria_cleverbot" = ["locales/*.po"]
