[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-coffee"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Coffee = "limnoria_coffee"

[tool.setuptools.package-dir]
"limnoria_coffee" = "."
"limnoria_coffee.local" = "local/"

[tool.setuptools.package-data]
"limnoria_coffee" = ["locales/*.po"]
