[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-coinpan"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Coinpan = "limnoria_coinpan"

[tool.setuptools.package-dir]
"limnoria_coinpan" = "."
"limnoria_coinpan.local" = "local/"

[tool.setuptools.package-data]
"limnoria_coinpan" = ["locales/*.po"]
