[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-dnsbl"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Dnsbl = "limnoria_dnsbl"

[tool.setuptools.package-dir]
"limnoria_dnsbl" = "."
"limnoria_dnsbl.local" = "local/"

[tool.setuptools.package-data]
"limnoria_dnsbl" = ["locales/*.po"]
