[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-echotyping"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
EchoTyping = "limnoria_echotyping"

[tool.setuptools.package-dir]
"limnoria_echotyping" = "."
"limnoria_echotyping.local" = "local/"

[tool.setuptools.package-data]
"limnoria_echotyping" = ["locales/*.po"]
