[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-eureka"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Eureka = "limnoria_eureka"

[tool.setuptools.package-dir]
"limnoria_eureka" = "."
"limnoria_eureka.local" = "local/"

[tool.setuptools.package-data]
"limnoria_eureka" = ["locales/*.po"]
