[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-fortune"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Fortune = "limnoria_fortune"

[tool.setuptools.package-dir]
"limnoria_fortune" = "."
"limnoria_fortune.local" = "local/"

[tool.setuptools.package-data]
"limnoria_fortune" = ["locales/*.po"]
