[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-goodfrench"
version = "0.1"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
GoodFrench = "limnoria_goodfrench"

[tool.setuptools.package-dir]
"limnoria_goodfrench" = "."
"limnoria_goodfrench.local" = "local/"

[tool.setuptools.package-data]
"limnoria_goodfrench" = ["locales/*.po"]
