[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-ignorenonvoice"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
IgnoreNonVoice = "limnoria_ignorenonvoice"

[tool.setuptools.package-dir]
"limnoria_ignorenonvoice" = "."
"limnoria_ignorenonvoice.local" = "local/"

[tool.setuptools.package-data]
"limnoria_ignorenonvoice" = ["locales/*.po"]
