[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-iwant"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Iwant = "limnoria_iwant"

[tool.setuptools.package-dir]
"limnoria_iwant" = "."
"limnoria_iwant.local" = "local/"

[tool.setuptools.package-data]
"limnoria_iwant" = ["locales/*.po"]
