[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-json"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Json = "limnoria_json"

[tool.setuptools.package-dir]
"limnoria_json" = "."
"limnoria_json.local" = "local/"

[tool.setuptools.package-data]
"limnoria_json" = ["locales/*.po"]
