[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-listempty"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
ListEmpty = "limnoria_listempty"

[tool.setuptools.package-dir]
"limnoria_listempty" = "."
"limnoria_listempty.local" = "local/"

[tool.setuptools.package-data]
"limnoria_listempty" = ["locales/*.po"]
