[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-listener"
version = "0.0.0"
authors = [
    { name = "quantumlemur" },
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Listener = "limnoria_listener"

[tool.setuptools.package-dir]
"limnoria_listener" = "."
"limnoria_listener.local" = "local/"

[tool.setuptools.package-data]
"limnoria_listener" = ["locales/*.po"]
