[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-millebornes"
version = "0.1"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
MilleBornes = "limnoria_millebornes"

[tool.setuptools.package-dir]
"limnoria_millebornes" = "."
"limnoria_millebornes.local" = "local/"

[tool.setuptools.package-data]
"limnoria_millebornes" = ["locales/*.po"]
