[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-noisykarma"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
NoisyKarma = "limnoria_noisykarma"

[tool.setuptools.package-dir]
"limnoria_noisykarma" = "."
"limnoria_noisykarma.local" = "local/"

[tool.setuptools.package-data]
"limnoria_noisykarma" = ["locales/*.po"]
