[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-ppp"
version = "0.0.0"
authors = [
    { name = "Valentin Lorentz" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
PPP = "limnoria_ppp"

[tool.setuptools.package-dir]
"limnoria_ppp" = "."
"limnoria_ppp.local" = "local/"

[tool.setuptools.package-data]
"limnoria_ppp" = ["locales/*.po"]
